# reppack

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: project_overview.md  project_structure.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/superpowers/plans/: 2026-04-05-fix-end-to-end-flow.md  2026-04-05-storybook-setup.md  2026-04-19-wizard-redesign.md  2026-04-25-remove-double-window.md  2026-04-25-reset-derived-state-on-source-change.md
docs/superpowers/specs/: 2026-04-19-wizard-redesign-design.md  2026-04-25-remove-double-window-design.md  2026-04-25-reset-derived-state-on-source-change-design.md
python-sidecar/: pyproject.toml
python-sidecar/reppack_sidecar/: __main__.py  audio_processor.py  model_manager.py  protocol.py  transcriber.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  import.rs  mod.rs  sidecar.rs
src-tauri/src/sidecar/: manager.rs  protocol.rs
src/components/: Button.tsx  Chip.tsx  ExportButton.tsx  FileImport.tsx  Kbd.tsx  PauseControl.tsx  Player.tsx  ProgressOverlay.tsx  SegmentList.tsx  Segmented.tsx  Slider.tsx
src/components/wizard/: CanvasShell.tsx  (+5 more)
src/hooks/: useAudioPlayer.ts  useSidecar.ts
src/lib/: i18n.ts  tauriCommands.ts  types.ts
src/routes/: __root.tsx  index.tsx
src/stores/: appStore.test.ts  appStore.ts
(+17 files in other folders)
