[project]
name = "reppack-sidecar"
version = "0.1.0"
description = "Python sidecar for reppack - audio transcription and processing"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
